css/Components/img-cards.css
.activities {
  margin-top: 48px;
}

.img-cards {
  display: flex;
  justify-content: space-between;
  gap: 32px;
}

/* Cols */
.img-col {
  display: flex;
  flex-direction: column;
  width: 25%;
  gap: 32px;
}

/* Cards */
.rounded-card {
  border-radius: 20px;
  box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.1);
}

.rounded-card a {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

/* Different cards height */
.full-height {
  height: 420px;
}

.full-height img {
  height: 369px;
}

.twothird-height {
  height: 246px;
}

.twothird-height img {
  height: 195px;
}

.onethird-height {
  height: 142px;
}

.onethird-height img {
  height: 91px;
}

.mid-height {
  height: 194px;
}

.mid-height img {
  height: 143px;
}

.img-rounded {
  width: 100%;
  border-radius: 20px 20px 0px 0px;
  object-fit: cover;
}

.activity-title {
  padding: 16px;
}

/* Tablet */
@media screen and (max-width: 992px) {
  .activity-title {
    padding: 10px;
  }

  .activity-title h3 {
    font-size: 12px;
  }
}

/* Mobile */
@media screen and (max-width: 768px) {
  .activities {
    padding: 16px;
    margin-top: 0px;
  }

  .img-cards {
    height: 100%;
    flex-direction: column;
    gap: 24px;
  }

  .img-col {
    width: 100%;
    gap: 24px;
  }

  .full-height,
  .mid-height,
  .onethird-height,
  .twothird-height {
    height: 200px;
  }
  .full-height img,
  .mid-height img,
  .onethird-height img,
  .twothird-height img {
    height: 149px;
  }

  .activity-title {
    padding: 16px;
  }

  .activity-title h3 {
    font-size: 16px;
  }
}

